--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <tr><td><button id="browseMatches"   >Browse Completed Matches</button></td></tr>
       <tr><td><button id="exportMatchStats">Export All Match Stats  </button></td></tr>
       <tr><td><button id="checkForUpdates" >Check for Updates       </button></td></tr>
+      <tr><td><button id="checkForWebAuth" >Check for WebAuthN      </button></td></tr>
     </table>
 
     <table id="startMatchTbl" hidden>
