--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="bg-image"></div>
   <div class="bg-text">
     <table id="mainMenu">
-      <tr><td><h2>Phoenix 16UG Stats Tracker Dev v1</h2></td></tr>
+      <tr><td><h2>Phoenix Stats Tracker v2</h2></td></tr>
       <tr><td><hr></td></tr>
 
       <tr><td><button id="startMatch"      >Start a Match           </button></td></tr>
