--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
     <table id="manageSetTbl" hidden>
       <tr><td id="manageSetTd"><div id="homeScore">Home: 0</div></td><td><div id="awayScore">Away: 0</div></td></tr>
 
-      <tr><td><button id="addPointFor"   >Add Point For   </button></td><td><button id="addPointAgainst"  >Add Point Against  </button></td></tr>
-      <tr><td><button id="addStat"       >Add Statistic   </button></td><td><button id="toggleServer"     >Toggle Server      </button></td></tr>
-      <tr><td><button id="addTimeoutHome">Timeout Home    </button></td><td><button id="addTimeoutAway"   >Timeout Away       </button></td></tr>
-      <tr><td><button id="addSub"        >Add Substitution</button></td><td><button id="endSet"           >End Set            </button></td></tr>
-      <tr><td><button id="minusPointFor" >Minus Point For </button></td><td><button id="minusPointAgainst">Minus Point Against</button></td></tr>
+      <tr><td><button id="addPointFor"   >Add Point For   </button></td><td><button id="addPointAgainst">Add Point Against  </button></td></tr>
+      <tr><td><button id="addTimeoutHome">Timeout Home    </button></td><td><button id="addTimeoutAway" >Timeout Away       </button></td></tr>
+      <tr><td><button id="addSub"        >Add Substitution</button></td><td><button id="endSet"         >End Set            </button></td></tr>
+      <tr><td><button id="addStat"       >Add Statistic   </button></td><td><button id="undoLastAction" >Undo Last Action   </button></td></tr>
 
       <tr><td colspan="2"><hr></td></tr>
       <tr><td><div id="currentServerLbl">Server:     </div></td><td><div id="currentServer">            </div></td></tr><tr><td colspan="2"><hr></td></tr>
